Start updating to 1.19